force-app/main/default/objects/Memo__c/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <label>Memo</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>