force-app/main/default/objects/Memo__c/fields/Memo_Date__c.field-meta.xml
<CustomField>
    <fullName>Memo_Date__c</fullName>
    <label>Memo Date</label>
    <type>Date</type>
</CustomField>