force-app/main/default/objects/Memo__c/fields/Quantity_on_memo__c.field-meta.xml
<CustomField>
    <fullName>Quantity_on_memo__c</fullName>
    <label>Quantity on memo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>