force-app/main/default/objects/Memo__c/fields/Quantity_seclected__c.field-meta.xml
<CustomField>
    <fullName>Quantity_seclected__c</fullName>
    <label>Quantity seclected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>